--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>AR Menu</title>
+
+  <!-- Model Viewer -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
+
+  <style>
+    body {
+      margin: 0;
+      background: #ffffff;
+    }
+    model-viewer {
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
 </head>
-<body style="margin:0; background:#fff;">
+
+<body>
 
 <model-viewer
-  src="pizza.glb"
+  src="biryani.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
   auto-rotate
-  style="width:100%; height:100vh;">
+  shadow-intensity="1"
+  alt="Chicken Biryani AR">
 </model-viewer>
 
 </body>
