--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <model-viewer
-  src="biryani.glb"
+  src="pizza.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
