--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>AR Menu</title>
 
-  <!-- Model Viewer -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
@@ -13,10 +11,28 @@
     body {
       margin: 0;
       background: #ffffff;
+      font-family: Arial, sans-serif;
     }
+
     model-viewer {
-      width: 100vw;
+      width: 100%;
       height: 100vh;
+    }
+
+    /* BIG AR BUTTON */
+    .ar-button {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 15px 25px;
+      background: #000;
+      color: #fff;
+      border-radius: 30px;
+      font-size: 18px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -29,9 +45,14 @@
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
   auto-rotate
-  shadow-intensity="1"
-  alt="Chicken Biryani AR">
+  shadow-intensity="1">
+
+  <!-- CUSTOM AR BUTTON -->
+  <button slot="ar-button" class="ar-button">
+    📱 View in AR
+  </button>
+
 </model-viewer>
 
 </body>
-</html>
+</html></html>
