--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <model-viewer
-  src="pizza.glb"
+  src="https://faziislamic01-coder.github.io/PizzAar/pizza.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
