--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 <body>
 
 <model-viewer
-  src="https://faziislamic01-coder.github.io/PizzAar/pizza.glb"
+  src="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF-Binary/Duck.glb"
   ar
   ar-modes="scene-viewer webxr quick-look"
   camera-controls
-  auto-rotate
-  shadow-intensity="1">
+  auto-rotate>
+</model-viewer>
 
   <!-- CUSTOM AR BUTTON -->
   <button slot="ar-button" class="ar-button">
